# LidarSegmentatorTest

./: CMakeLists.txt  README.md
pythonScriptForDebug/: pcVis.ipynb
result/: clustered_ground.csv  filtered_clustered.pcd  filtered_ransac.pcd  points.csv  ransac_ground.csv
src/: LidarSegTestTask.cpp
